# freepiano-next

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.bat
doc/: freepiano-next-plan.md  qt-quick-responsive-ui.md
qml/: FpnComputerKeyboard.qml  FpnControlBar.qml  FpnMainContent.qml  FpnPianoKey.qml  FpnPianoKeyboard.qml  FpnResponsiveWorkspace.qml  FpnSidebar.qml  FpnTheme.qml  Main.qml  PianoKey.qml
src/: main.cpp
src/audio/: FpnWasapiAudioEngine.cpp  FpnWasapiAudioEngine.h  WasapiAudioEngine.cpp  WasapiAudioEngine.h
src/core/: FpnPianoController.cpp  FpnPianoController.h  PianoController.cpp  PianoController.h
src/input/: FpnKeyboardInputMapper.cpp  FpnKeyboardInputMapper.h  FpnNullMidiInputProvider.h  IFpnMidiInputProvider.h  IMidiInputProvider.h  KeyboardInputMapper.cpp  KeyboardInputMapper.h  NullMidiInputProvider.h
src/midi/: FpnMidiEvent.h  FpnMidiEventRouter.cpp  FpnMidiEventRouter.h  MidiEvent.h  MidiEventRouter.cpp  MidiEventRouter.h
src/vst2/: FpnVst2Host.cpp  FpnVst2Host.h  Vst2Host.cpp  Vst2Host.h  aeffect.h  vstfxstore.h
src/vst3/: FpnVst3Host.cpp  FpnVst3Host.h  Vst3Host.cpp  Vst3Host.h
tests/: test_keyboard_input_mapper.cpp  test_midi_event_router.cpp
